# LinearCalib

./: CMakeLists.txt  LICENSE  keywords.txt  library.properties  readme.md
examples/CalibratedAnalogInput/: CalibratedAnalogInput.ino
src/: linearcalib.cpp  linearcalib.h
